// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tact-fmt foo.tact Default run 1`] = `
{
  "code": 0,
  "kind": "exited",
  "stderr": "",
  "stdout": "contract Test {
    get fun greeting(): String {
        return "hello world";
    }
}

",
}
`;

exports[`tact-fmt foo.tact Default run with write to file 1`] = `
{
  "code": 0,
  "kind": "exited",
  "stderr": "",
  "stdout": "",
}
`;

exports[`tact-fmt foo.tact Default run with write to file 2`] = `
"contract Test {
    get fun greeting(): String {
        return "hello world";
    }
}
"
`;

exports[`tact-fmt foo.tact With syntax error 1`] = `
{
  "code": 1,
  "kind": "exited",
  "stderr": "src/cli/tact-fmt/output/contact.tact:4:33: Expected "!!", "!=", "%", "&", "&&", "(", ")", "*", "+", ",", "-", ".", "/", "<", "<<", "<=", "==", ">", ">=", ">>", "?", "^", "|", or "||"
  3 |     get fun greeting(): String {
> 4 |         return foo("hello world";
                                      ^
  5 |     }

",
  "stdout": "",
}
`;
